--- a/NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,12 @@
             layout="@layout/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-       <!--FrameLayout
+
+       <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
-           android:layout_height="match_parent"/-->
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:text="THIS IS CONTENT"/>
+           android:layout_height="match_parent"/>
+
    </LinearLayout>
     <!--ScrollView
         android:id="@+id/scrollView"
