--- a/NavigationDrawer/app/src/main/res/layout/expand_group.xml
+++ b/NavigationDrawer/app/src/main/res/layout/expand_group.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#496aad"
+    android:background="@color/hufstory_color"
     android:padding="8dp">
 
     <TextView
