--- a/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="#496aad"
+    android:background="@color/hufstory_color"
     android:orientation="horizontal"
 
     android:paddingLeft="@dimen/activity_horizontal_margin"
