--- a/NavigationDrawer/app/src/main/res/layout/toolbar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/toolbar.xml
@@ -8,5 +8,5 @@
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:background="#496add">
+    android:background="@color/hufstory_color">
 </android.support.v7.widget.Toolbar>
