--- a/NavigationDrawer/app/src/main/res/layout/expand_group.xml
+++ b/NavigationDrawer/app/src/main/res/layout/expand_group.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/hufstory_color"
+    android:background="@drawable/shadow"
     android:padding="8dp">
+    <!--modified by yuri, 2016-02-25 23:10-->
 
     <TextView
         android:id="@+id/groupTitle"
