--- a/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@drawable/shadow"
+    android:background="@color/hufstory_color"
     android:orientation="horizontal"
+    android:elevation="3dp"
 
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="10dp"
