--- a/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
@@ -40,21 +40,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"-->
         <ImageView
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/logout"
+            android:src="@drawable/settingiconbar"
             android:layout_weight="1"
             android:id="@+id/setting"/>
         <ImageView
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/logout"
+            android:src="@drawable/loginiconbar"
             android:layout_weight="1"
             android:id="@+id/logout"/>
         <ImageView
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/logout"
+            android:src="@drawable/closeicon"
             android:layout_weight="1"
             android:id="@+id/exit"
             android:onClick="exitButton"/>
