--- a/NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
     <!--ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"-->
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
