--- a/NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
             android:layout_marginLeft="-65dp">
             <include
                 layout="@layout/manager_bar" />
-            <include
-                layout="@layout/top_image_menu" />
+            <!--include
+                layout="@layout/top_image_menu" /-->
             <include
                 layout="@layout/expand_listview" />
             <!--include
