--- a/NavigationDrawer/app/src/main/res/layout/expand_listview.xml
+++ b/NavigationDrawer/app/src/main/res/layout/expand_listview.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/topImageMenu"
+    android:layout_below="@+id/managerBar"
     android:id="@+id/expanded_menu">
     <ExpandableListView
         android:id="@+id/expandListview"
