main activity refactoring (not include app update part)

--- a/NavigationDrawer/app/src/main/res/layout/activity_menu.xml
+++ b/NavigationDrawer/app/src/main/res/layout/activity_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/menuFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuFragment">
+    tools:context=".menu_fragment.MenuFragment">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
