--- a/NavigationDrawer/app/src/main/res/layout/top_image_menu.xml
+++ b/NavigationDrawer/app/src/main/res/layout/top_image_menu.xml
@@ -19,6 +19,7 @@
             android:layout_width="45dp"
             android:layout_height="50dp"
             android:id="@+id/hubigo"
+            android:tag="후비고"
             android:src="@drawable/hubigoicon"/>
         <TextView
             android:layout_width="45dp"
@@ -37,6 +38,7 @@
             android:layout_width="45dp"
             android:layout_height="50dp"
             android:id="@+id/bbang"
+            android:tag="빵차"
             android:src="@drawable/busicon" />
         <TextView
             android:layout_width="45dp"
@@ -56,6 +58,7 @@
             android:layout_width="45dp"
             android:layout_height="50dp"
             android:id="@+id/eatmenu"
+            android:tag="식단표"
             android:src="@drawable/foodicon"
             />
         <TextView
@@ -77,6 +80,7 @@
             android:layout_width="45dp"
             android:layout_height="50dp"
             android:id="@+id/momo"
+            android:tag="모현의모든것"
             android:src="@drawable/momoicon"
             android:layout_weight="1"/>
         <TextView
