--- a/NavigationDrawer/app/src/main/res/layout/bottom_image_menu.xml
+++ b/NavigationDrawer/app/src/main/res/layout/bottom_image_menu.xml
@@ -24,7 +24,7 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:id="@+id/h2"
-            android:layout_below="@id/login"
+            android:layout_below="@+id/login"
             android:text="로그아웃"
             android:textSize="11dp"
             android:layout_marginTop="3dp"
@@ -44,7 +44,7 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:id="@+id/b2"
-            android:layout_below="@id/facebook"
+            android:layout_below="@+id/facebook"
             android:text="페이스북"
             android:textSize="11dp"
             android:layout_marginTop="3dp"
@@ -65,7 +65,7 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:id="@+id/e2"
-            android:layout_below="@id/event"
+            android:layout_below="@+id/event"
             android:text="이벤트"
             android:gravity="center"/>
     </RelativeLayout>
@@ -84,7 +84,7 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:id="@+id/m2"
-            android:layout_below="@id/setting"
+            android:layout_below="@+id/setting"
             android:text="설정"
             android:gravity="center"/>
     </RelativeLayout>
