--- a/NavigationDrawer/app/src/main/res/layout/fragment_menu.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_menu.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MenuFragment$PlaceholderFragment"
+    tools:context=".menu_fragment.MenuFragment$PlaceholderFragment"
     android:background="@color/tab_background_selected">
 
     <LinearLayout
