--- a/NavigationDrawer/app/src/main/res/layout/bottom_image_menu.xml
+++ b/NavigationDrawer/app/src/main/res/layout/bottom_image_menu.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/h2"
             android:layout_below="@+id/login"
-            android:text="로그아웃"
+            android:text="로그인"
             android:textSize="11dp"
             android:layout_marginTop="3dp"
             android:gravity="center"/>
