--- a/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
@@ -20,14 +20,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="USER NickName"
+            android:text=""
             android:textSize="15dp"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="(USER ID)"
+            android:text=""
             android:textSize="10dp"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
