--- a/NavigationDrawer/app/src/main/res/layout/webview.xml
+++ b/NavigationDrawer/app/src/main/res/layout/webview.xml
@@ -4,4 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/webView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"/>
