--- a/NavigationDrawer/app/src/main/res/layout/splash_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/splash_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:padding="0dp"
         android:layout_margin="0dp"
+        android:background="@color/hufstory_color"
         android:src="@drawable/loading_image"/>
 
 </LinearLayout>
