--- a/NavigationDrawer/app/src/main/res/layout/splash_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/splash_layout.xml
@@ -11,6 +11,6 @@
         android:padding="0dp"
         android:layout_margin="0dp"
         android:background="@color/hufstory_color"
-        android:src="@drawable/loading_image"/>
+        android:src="@mipmap/splash"/>
 
 </LinearLayout>
