--- a/NavigationDrawer/app/src/main/res/layout/fragment_hubigo.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_hubigo.xml
@@ -2,14 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bright_gray"
     tools:context=".hubigo_fragment.HubigoFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/hubigoSimpleNodeList"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="0dp">
+        android:orientation="vertical">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/hubigoSimpleNodeList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:layout_weight="1">
+
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
 </FrameLayout>
