--- a/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
@@ -5,60 +5,125 @@
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-
-        android:id="@+id/carteCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="2dp"
-        android:layout_marginBottom="10dp"
-        android:background="#ffffff">
+        android:layout_marginBottom="10dp">
 
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="10dp"
-            android:columnCount="3">
+            android:orientation="vertical">
 
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:columnCount="2">
+                    <TextView
+                        android:id="@+id/lecture"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="신입생세미나"
+                        android:textSize="20sp"
+                        android:textStyle="bold"/>
+
+                    <ImageView
+                        android:id="@+id/bookmark"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_rowSpan="3"
+                        android:layout_gravity="right"
+                        android:src="@android:drawable/star_off"/>
+
+                    <TextView
+                        android:id="@+id/professor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="김낙현"
+                        android:textSize="14sp"
+                        />
+                    <TextView
+                        android:id="@+id/major"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="컴퓨터전자시스템공학부"
+                        android:textSize="14sp"
+                        />
+
+                </GridLayout>
             <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:drawableLeft="@mipmap/megaphone"
-                android:text="한식"
-                android:textSize="20dp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
+                android:background="@drawable/line"/>
+            <GridLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:textSize="14dp"
-                android:text="오전 10:00 ~ 오후 18:00"/>
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:columnCount="3">
 
-            <TextView
-                android:id="@+id/cost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_margin="5dp"
-                android:layout_gravity="right"
-                android:textSize="14dp"
-                android:text="3500원"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_margin="5dp"
+                    android:text="최신 평가 ▶"
+                    android:textSize="14sp"
+                    android:textColor="@color/hufstory_color"
+                    />
 
-            <TextView
-                android:id="@+id/body"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_columnSpan="3"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                android:textSize="16dp"
-                android:text="콩밥\n콩나물김치찌개\n콩나물무침\n콩자반" />
+                <TextView
+                    android:id="@+id/recent_evaluation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_margin="5dp"
+                    android:text="가장 기억에 남는 수업이\n ㅁㄴㅇ"
+                    android:textSize="14sp"
+                    />
 
-        </GridLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:orientation="vertical"
+                    android:layout_gravity="right"
+                    android:gravity="center">
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/grade_chart"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginRight="10dp">
+
+                    </com.github.mikephil.charting.charts.PieChart>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="성적 만족도"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="5dp"/>
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/content_chart"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginRight="10dp">
+
+                    </com.github.mikephil.charting.charts.PieChart>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="수업 만족도"
+                        android:layout_marginRight="10dp"/>
+
+                </LinearLayout>
+            </GridLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
