--- a/NavigationDrawer/app/src/main/res/values/colors.xml
+++ b/NavigationDrawer/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="text_color_unselected">#686868</color>
     <color name="text_color_selected">#353535</color>
     <color name="hufstory_color">#61baf7</color>
+    <color name="bright_gray">#e7e7e7</color>
 </resources>
