식단표 안되는 사소한 문제 해결, 후비고 search bar 추가

--- a/NavigationDrawer/app/src/main/res/layout/fragment_hubigo.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_hubigo.xml
@@ -9,7 +9,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/hufstory_color"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true">
+            <EditText
+                android:id="@+id/search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@color/cardview_light_background"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp" />
+            <ImageView
+                android:id="@+id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_search"
+                android:layout_alignRight="@+id/search_bar"
+                android:layout_alignBottom="@+id/search_bar"/>
+        </RelativeLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/hubigoSimpleNodeList"
             android:layout_width="match_parent"
