--- a/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="2dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        android:background="@color/cardview_light_background">
 
         <LinearLayout
             android:layout_width="match_parent"
