후비고 메인파트 구조 완성

--- a/NavigationDrawer/app/src/main/res/layout/fragment_hubigo.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_hubigo.xml
@@ -23,7 +23,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="34dp"
+                android:inputType="text"
+                android:imeOptions="actionSearch"/>
             <ImageView
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
