--- a/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
@@ -79,10 +79,11 @@
 
                 <TextView
                     android:id="@+id/recent_evaluation"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_margin="5dp"
+                    android:singleLine="false"
                     android:text="가장 기억에 남는 수업이\n ㅁㄴㅇ"
                     android:textSize="14sp"
                     />
