--- a/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
@@ -35,8 +35,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_rowSpan="3"
-                        android:layout_gravity="right"
-                        android:src="@android:drawable/star_off"/>
+                        android:layout_gravity="right|center"
+                        android:layout_marginRight="3dp"
+                        android:src="@drawable/bookmark_image_selector"/>
 
                     <TextView
                         android:id="@+id/professor"
@@ -84,7 +85,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_margin="5dp"
                     android:singleLine="false"
-                    android:text="가장 기억에 남는 수업이\n ㅁㄴㅇ"
+                    android:text=""
                     android:textSize="14sp"
                     />
 
