--- a/NavigationDrawer/app/src/main/res/layout/toolbar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/toolbar.xml
@@ -9,5 +9,14 @@
     android:minHeight="?attr/actionBarSize"
     app:layout_scrollFlags="scroll|enterAlways"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:layout_centerHorizontal="true"
     android:background="@color/hufstory_color">
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/toolbarLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp">
+
+    </android.support.design.widget.CoordinatorLayout>
 </android.support.v7.widget.Toolbar>
