--- a/NavigationDrawer/app/src/main/res/layout/fragment_detail_node.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_detail_node.xml
@@ -180,19 +180,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/evaluation_recycler_view"
+            android:background="@color/cardview_light_background"
             android:layout_weight="1">
         </android.support.v7.widget.RecyclerView>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/line" />
-
         <GridLayout
+            android:background="@color/cardview_light_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="0dp"
             android:columnCount="2">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="2"
+                android:background="@drawable/line" />
 
             <TextView
                 android:layout_width="wrap_content"
