--- a/NavigationDrawer/app/src/main/res/layout/hubigo_evaluation_cardview.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_evaluation_cardview.xml
@@ -71,6 +71,19 @@
             </GridLayout>
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="2"
+                android:layout_gravity="right"
+                android:layout_marginTop="5dp"
+                android:gravity="right"
+                android:id="@+id/delete_button"
+                android:text="삭제"
+                android:textSize="@dimen/hubigo_detail_text_size"
+                android:textColor="@color/text_color_unselected"
+                android:visibility="visible"/>
+
+            <TextView
                 android:layout_columnSpan="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,6 +91,7 @@
                 android:id="@+id/comment"
                 android:textSize="@dimen/hubigo_detail_text_size"
                 android:text="가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는"/>
+
         </GridLayout>
 
     </android.support.v7.widget.CardView>
