--- a/NavigationDrawer/app/src/main/res/layout/fragment_detail_node.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_detail_node.xml
@@ -210,32 +210,48 @@
                 android:padding="0dp"
                 android:layout_gravity="right"
                 android:columnCount="2">
-                <ImageView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/grade_satis"
+                    android:id="@+id/grade_button"
                     android:layout_marginRight="30dp"
-                    android:src="@drawable/hubigo_satisfaction_selector"/>
-                <ImageView
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/grade_satis"
+                        android:src="@drawable/hubigo_satisfaction_selector"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="2dp"
+                        android:textSize="@dimen/hubigo_detail_text_size"
+                        android:text="성적"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/content_satis"
+                    android:id="@+id/content_button"
                     android:layout_marginRight="15dp"
-                    android:src="@drawable/hubigo_satisfaction_selector"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="30dp"
-                    android:textSize="@dimen/hubigo_detail_text_size"
-                    android:text="성적"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/hubigo_detail_text_size"
-                    android:text="수업"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="14dp" />
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/content_satis"
+                        android:src="@drawable/hubigo_satisfaction_selector"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="2dp"
+                        android:textSize="@dimen/hubigo_detail_text_size"
+                        android:text="수업"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
             </GridLayout>
             <TextView
                 android:layout_width="match_parent"
