--- a/NavigationDrawer/app/src/main/res/layout/hubigo_evaluation_cardview.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_evaluation_cardview.xml
@@ -40,34 +40,48 @@
             <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="0dp"
                 android:layout_gravity="right"
                 android:columnCount="2">
-                <ImageView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/grade_satis"
                     android:layout_marginRight="30dp"
-                    android:src="@drawable/hubigo_satisfaction_selector"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/content_satis"
+                    android:orientation="vertical">
 
-                    android:src="@drawable/hubigo_satisfaction_selector"/>
-                <TextView
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/grade_satis"
+                        android:src="@drawable/hubigo_satisfaction_selector"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="2dp"
+                        android:textSize="@dimen/hubigo_detail_text_size"
+                        android:text="성적"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="30dp"
-                    android:textSize="@dimen/hubigo_detail_text_size"
-                    android:text="성적"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/hubigo_detail_text_size"
-                    android:text="수업"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="5dp" />
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/content_satis"
+                        android:src="@drawable/hubigo_satisfaction_selector"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="2dp"
+                        android:textSize="@dimen/hubigo_detail_text_size"
+                        android:text="수업"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
             </GridLayout>
 
             <TextView
@@ -76,6 +90,7 @@
                 android:layout_columnSpan="2"
                 android:layout_gravity="right"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="3dp"
                 android:gravity="right"
                 android:id="@+id/delete_button"
                 android:text="삭제"
