--- a/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_simple_node_layout.xml
@@ -71,6 +71,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/comment_footnote"
                     android:layout_marginTop="20dp"
                     android:layout_margin="5dp"
                     android:text="최신 평가 ▶"
