--- a/NavigationDrawer/app/src/main/res/layout/fragment_hubigo_status.xml
+++ b/NavigationDrawer/app/src/main/res/layout/fragment_hubigo_status.xml
@@ -38,7 +38,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="30dp"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
