--- a/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
+++ b/NavigationDrawer/app/src/main/res/layout/manager_bar.xml
@@ -20,6 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/nick_name"
             android:text=""
             android:textSize="15dp"
             android:textStyle="bold"
@@ -27,6 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/id"
             android:text=""
             android:textSize="10dp"
             android:textStyle="bold"
