후비고 과목 버그 수정 및 복붙가능, 빵차 내림

--- a/NavigationDrawer/app/src/main/res/layout/hubigo_evaluation_cardview.xml
+++ b/NavigationDrawer/app/src/main/res/layout/hubigo_evaluation_cardview.xml
@@ -103,6 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textIsSelectable="true"
                 android:id="@+id/comment"
                 android:textSize="@dimen/hubigo_detail_text_size"
                 android:text="가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는가장 기억에 남는"/>
