모모 기본 구조 및 예제 구현

--- a/NavigationDrawer/app/src/main/res/values/colors.xml
+++ b/NavigationDrawer/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="hufstory_select_color">#3e7ba4</color>
     <color name="bright_gray">#e7e7e7</color>
     <color name="background_black">#282828</color>
+    <color name="momo_color">#3661ad</color>
 </resources>
